Fix AWS sonar bugs